demo/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: diverge-gateway
  namespace: default
spec:
  gatewayClassName: k3d
  listeners:
  - name: http
    protocol: HTTP
    port: 80
